# Lab-in-university

./: README.md  REMADE.md
Aircaft in test(Member item)/remote/: partitions.csv  platformio.ini
Aircaft in test(Member item)/remote/src/: main.cpp
Aircraft in test(Member item)/fly/: platformio.ini
Aircraft in test(Member item)/fly/src/: main.cpp
Electronics Design Contest in 2023(Air and ground cooperative fire protection system)/devel/: .catkin  .rosinstall  setup.sh
Electronics Design Contest in 2023(Air and ground cooperative fire protection system)/src/auto_flight/: CMakeLists.txt
Electronics Design Contest in 2023(Air and ground cooperative fire protection system)/src/serialport/: CMakeLists.txt
Electronics Design Contest in 2023(Air and ground cooperative fire protection system)/src/user_messages/: CMakeLists.txt  package.xml
Electronics Design Contest in 2024(Game of chance)/: 树莓派连线.doc
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/: CMakeLists.txt
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/include/test/APP/: Debug.hpp  Get_Position.hpp  PID.hpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/include/test/HW/: Arm_Set.hpp  Get_Key.hpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/include/test/PTC/: MyList.hpp  MyServer.hpp  MyTopic.hpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/include/test/SYS/: MyROS.hpp  Some_define.hpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/launch/: test.launch  test2.launch
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/msg/: all_position.msg  key_send.msg  next_piece.msg  piece.msg
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/scripts/HW/: LED.py  key_node.py  open_get_state.py
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/scripts/MAIN/: OLED_Show.py
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/scripts/PTC/: Send_Arm.py
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/src/SYS/: Task_Sch.cpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/src/TEST/: test1.cpp
Electronics Design Contest in 2024(Game of chance)/catkin_ws/src/test/src/WORK/: Algorithm.cpp  Angle_Send_Position.cpp  Arm_Contorl.cpp
SiChuan-Aircraft competition(2023)/build_isolated/: catkin_make_isolated.cache
SiChuan-Aircraft competition(2023)/build_isolated/duoji_node/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
SiChuan-Aircraft competition(2023)/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
SiChuan-Aircraft competition(2023)/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
SiChuan-Aircraft competition(2024)/V4.5/: 方案.drawio
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/: CMakeLists.txt
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/CSV_DATA/: cloud.csv
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/config/: config.yaml
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/include/test/APP/: Debug.hpp  Pos_Close.hpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/include/test/HW/: MyCloud.hpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/include/test/SYS/: MyROS.hpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/launch/: init.launch  test1.launch
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/launch/click_launch/: click_work.launch
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/launch/fix_launch/: fix_other.launch
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/msg/: avoidant_date.msg  set_position.msg
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/script/: Cloud_Map.py  all.py
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/sh/: run_vary.sh
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/simulation/: simul_2D.launch
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/src/APP/: Avoid_V1.cpp  Avoid_V3.cpp  Send_Cloud.cpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/src/TEST/: Look_State.cpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/src/WORK/: Fixed_Path.cpp  INoffboard.cpp  Vary_Path.cpp
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/worlds/: test1.world  world10.world  world5.world  world7.world  world9.world
SiChuan-Aircraft competition(2024)/V4.5/catkin_ws/src/test/worlds/world/: world1.world  world3.world
(+770 files in other folders)
